--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-        <h1 id = "reto">Falta de Atendimento à Saúde Física e Mental Na Etec</h1> 
+        <h1 id = "reto">Atendimento à Saúde Física e Mental Na Etec</h1> 
   <nav>
     <ul id = "reto2">
         <li><a href = "index.html">Home</a></li>
