--- a/Aconteceetec.html
+++ b/Aconteceetec.html
@@ -22,7 +22,7 @@
     <section class="ods-section">
         <div class="container">
             <div class="ods-content">
-                <h1>Expicação</h1>
+                <h1>Explicação</h1>
                 <p>Perguntamos a o diretos da nossa instuição certas questões sobre o assunto, essas são as perguntas e as respostas.</p>
             </div>
         </div>
