--- a/sobre.html
+++ b/sobre.html
@@ -31,13 +31,13 @@
   <section class="ativista">
       <div class="container">
           <h2 class="title">Nosso Propósito</h2>
-          <p>Acreditamos que todos devem ter a sua saúde sempre em sua melhor forma, sendo física ou mental, sem um certo equilibrio entre as duas, o ambiente escoloar se torna horrível de se vivenciar, com toda a cobrança que os alunos da ETEC já tem, esse peso a mais é algo impossível de se aguentar.</p>
+          <p>Nós criamos um site informativo, que tem como objetivo sugerir melhorias para o ambiente escolar e utilizamos como base as ODS 3 e 4 da ONU, para falarmos sobre a saúde mental, pois, acreditamos que todos devem ter a sua saúde sempre em sua melhor forma, sendo física ou mental, sem um certo equilíbrio entre as duas, o ambiente escolar se torna horrível de se vivenciar, com toda a cobrança que os alunos da ETEC já têm, esse peso a mais é algo praticamente impossível.</p>
       </div>
   </section>
   <section class="ativista">
           <div class="container">
             <h2 class="title">Solução</h2>
-            <p>A nossa solução serai a de criar um escritório na escola, visando cuidar da Saúde mental e física, não só do alunos mas também de todos os funcionários da escola, por meio de parcerias com universidades de psicolgia e enfermagem, trazer estes alunos para a nosssa escola, trazendo boms resultados para todos os lados onde os estudantes da nossa escola terão um cuidado a mais na sua própia saúde e os univesitários terão uma experiência a mais em suas vidas profissionais.</p>
+            <p>A nossa solução seria a de criar um escritório na escola, visando cuidar da Saúde mental e física, não só dos alunos, mas também de todos os funcionários da escola, por meio de parcerias com universidades de psicologia e enfermagem, trazer estes profissionais para a nossa escola, trazendo bons resultados para todos os lados onde os estudantes da nossa escola terão um cuidado a mais na sua própria saúde e os universitários terão uma experiência a mais em suas vidas profissionais.</p>
           </div>
   </section>
   <section class="cards">
