--- a/Aconteceetec.html
+++ b/Aconteceetec.html
@@ -62,6 +62,8 @@
     <section class="ativista">
         <div class="container">
             <h3>Página dedica á entedermos os processos que a nossa escola já oferece e faz sobre o nosso problema.</h3>
+            <P>Queremos deixar claro, que a ETEC de Hortolâmdia segue todas as leís, sendo elas:</P>
+            <p>LEI Nº 14.819, DE 16 DE JANEIRO DE 2024</p>
 
         </div>
     </section>
