--- a/Aconteceetec.html
+++ b/Aconteceetec.html
@@ -62,8 +62,8 @@
     <section class="ativista">
         <div class="container">
             <h3>Página dedica á entedermos os processos que a nossa escola já oferece e faz sobre o nosso problema.</h3>
-            <P>Queremos deixar claro, que a ETEC de Hortolâmdia segue todas as leís, sendo elas:</P>
-            <p>LEI Nº 14.819, DE 16 DE JANEIRO DE 2024</p>
+            <P>Queremos deixar claro, que a ETEC de Hortolâmdia segue todas as leís, sendo ela:</P>
+            <p><a href = "https://www.planalto.gov.br/ccivil_03/_ato2023-2026/2024/Lei/L14819.htm">LEI Nº 14.819, DE 16 DE JANEIRO DE 2024</p>
 
         </div>
     </section>
