--- a/sobre.html
+++ b/sobre.html
@@ -40,6 +40,22 @@
             <p>A nossa solução seria a de criar um escritório na escola, visando cuidar da Saúde mental e física, não só dos alunos, mas também de todos os funcionários da escola, por meio de parcerias com universidades de psicologia e enfermagem, trazer estes profissionais para a nossa escola, trazendo bons resultados para todos os lados onde os estudantes da nossa escola terão um cuidado a mais na sua própria saúde e os universitários terão uma experiência a mais em suas vidas profissionais.</p>
           </div>
   </section>
+      <section class="ativista">
+          <div class="container">
+            <h2 class="title">Conhecimentos Utilizados</h2>
+              <h3>APS</h3>
+              <P>Utilizamos de APS Análise de requisitos, organização do time, identificação do problema, análise de dados, em nosssa organização do problema e da equipe.</P>
+              <h3>PWI</h3>
+              <P>Utilizamos de PWI HTML a linguagem de marcação para a estrutura do site, CSS para a estilização do site e JS para dar funcionalidade ao site.</P>
+              <h3>BD</h3>
+              <P>Utilizamos BD, para conseguirmos de forma eficiente armazenarmos de eficiente e organizada os dados do nosso site.</P>
+
+
+
+              
+          </div>
+  </section>
+
   <section class="cards">
       <div class="card">
           <img src="gusta.jpg" alt="gugug">
