--- a/sobre.html
+++ b/sobre.html
@@ -58,7 +58,7 @@
 
   <section class="cards">
       <div class="card">
-          <img src="gusta.jpg" alt="gugug">
+          <img src="guto.jpg" alt="gugug">
           <h3>Gustavo T.</h3>
           <p>Lider do grupo e também o front-end,responsável por liderar e organizar o time e a criação do site.</p>
       </div>
