--- a/sobre.html
+++ b/sobre.html
@@ -44,10 +44,16 @@
           <div class="container">
             <h2 class="title">Conhecimentos Utilizados</h2>
               <h3>APS</h3>
+              <h2>Fernanda Hellen</h2>
+              <p>ESP. Em Gereciamento de Dados</p>
               <P>Utilizamos de APS Análise de requisitos, organização do time, identificação do problema, análise de dados, em nosssa organização do problema e da equipe.</P>
               <h3>PWI</h3>
+              <h2>Samuel dos Santos</h2>
+              <p>Esp. Processamento de Dados</p>
               <P>Utilizamos de PWI HTML a linguagem de marcação para a estrutura do site, CSS para a estilização do site e JS para dar funcionalidade ao site.</P>
               <h3>BD</h3>
+              <h2>Priscila Batista</h2>
+              <p>Esp. Processamento de Dados</p>
               <P>Utilizamos BD, para conseguirmos de forma eficiente armazenarmos de eficiente e organizada os dados do nosso site.</P>
 
 
