--- a/sobre.html
+++ b/sobre.html
@@ -75,7 +75,7 @@
       </div>
       <div class="card">
           <img src="vitor.jpg" alt = "Fumaça">
-          <h3>Vitor F.</h3>
+          <h3>Victor F.</h3>
           <p>Um dos dois analistas, sendo responsável pela verificação das informações, vendo se são relevantes ao projeto.</p>
       </div>
       <div class="card">
